part1/pong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pong-ingress
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Exact
            backend:
              service:
                name: pong-svc
                port:
                  number: 2350
